Minor adjustments related to ray tracer development.